# Real-Time-Rendering-

./: README.md
Assignment 2/: CMakeLists.txt  imgui.ini  stb_image_impl.cpp
Assignment 2/assets/house/: simple_house_no_texture.mtl
Assignment 2/assets/model/: low_poly_model_no_rigged_no_textured.mtl
Assignment 2/assets/teapot/: moraccan_teapot.mtl
Assignment 2/shaders/: object.frag  object.vert  skybox.frag  skybox.vert
Assignment 2/src/: main.cpp  mesh.cpp  stb.cpp
Assignment 2/src/headers/: mesh.h  stb_image.h
Assignment 2/src/shaders/: object.frag  object.vert  skybox.frag  skybox.vert
Assignment1/: CMakeLists.txt
Assignment1/Assets/model/: snok.mtl
Assignment1/Source code/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp
Assignment1/headers/: Camera.h  EBO.h  Mesh.h  Model.h  VAO.h  VBO.h  shader.h
Assignment1/shaders/: basic.frag  basic.vert
